[package]
name = "tasklib"
version = "0.1.3"
edition = "2021"
publish = true
readme = "README.md"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
description = "Library to use Taskwarrior with Rust."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/AceofSpades5757/tasklib-rs"
repository = "https://github.com/AceofSpades5757/tasklib-rs"

[dependencies]
chrono = "0.4.24"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
