[package]
name = "tasklib"
version = "0.2.0"
edition = "2021"
publish = true
readme = "README.md"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
description = "Library to use Taskwarrior with Rust."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/AceofSpades5757/tasklib-rs"
repository = "https://github.com/AceofSpades5757/tasklib-rs"

[dependencies]
chrono = "0.4.24"
nom = "7.1.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["serde"] }
