[package]
name = "tasklib"
version = "0.3.3"
edition = "2021"
publish = true
readme = "README.md"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
description = "Library used to interact with Taskwarrior in Rust."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/AceofSpades5757/tasklib-rs"
repository = "https://github.com/AceofSpades5757/tasklib-rs"

[dependencies]
chrono = "0.4.37"
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["serde"] }
